Drop Apache `commons-io` in favor of plain Java API (#221)